# qa-framework-gen

./: .gitignore  ENHANCEMENT_SUMMARY.md  LICENSE  QAFrameworkGen.md  README.md  SELENIUM_VS_PLAYWRIGHT.md  pyproject.toml
framework/: __init__.py
framework/cli/: __init__.py  __main__.py
framework/models/: __init__.py  config.py  locator.py
framework/templates/: __init__.py  page_object.py.tmpl  playwright_base_page.py.tmpl  selenium_base_page.py.tmpl
framework/templates/base_project/: config.yml  conftest.py  pytest.ini
framework/templates/base_project/pages/: __init__.py  example_page.py
framework/templates/base_project/tests/: __init__.py  test_example.py
framework/utils/: __init__.py  config_loader.py  logger.py
